# proj-01-dank-corgi

./: .env  .gitignore  Dockerfile  README.md  _team-agreement.md  api.qmd  app.py  explore.qmd  model-card.qmd  proposal.qmd  proposal.tex  pyproject.toml  report-model-code.qmd  report.qmd  vetiver_requirements.txt
.github/ISSUE_TEMPLATE/: mentor-eda-review.yml  mentor-proposal-review.yml
data-raw/: README.md  ll44_unit_income_rent.csv  nhanes1518_selected_labels.csv  nhanes2123_prediabetes_features_datadict.json  nhanes2123_prediabetes_features_labeled.csv  nhanes2123_prediabetes_features_labeled_clean.csv  nhanes2123_surveyonly_clean.csv
